--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -1,4 +1,71 @@
-.footer-style{
-    background-color: #0B4F6C;
-    color: #FBFBFF;
+.item1 { grid-area: first; }
+.item2 { grid-area: second; }
+.item3 { grid-area: third; }
+
+.grid-container {
+    display: grid;
+    grid-template-areas:
+      'first first second second third third';
+  margin-top: 5%;
+  width: -webkit-fill-available;
 }
+
+.grid-container > div {
+    background-color: rgb(11, 79, 108);
+    color: rgb(251, 251, 255);
+  }
+
+  .about-h {
+    margin: 0px 0px 0.001em;
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.6;
+    letter-spacing: 0.0075em;
+    display: block;
+  }
+  .first{
+    padding: 1rem 0rem 1rem 3rem;
+  }
+  .first >p{
+    margin: 0px;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+  }
+
+  .second{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 0rem 1rem 0rem;
+  }
+  .second>p{
+    margin: 0px;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
+  }
+
+  .third{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem 0rem 1rem 0rem;
+  }
+  .links-div{
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+.link{
+    text-decoration: none;
+    font-size: 1.7rem;
+    padding: 0 1rem;
+    color: rgb(251, 251, 255);
+    transition: .2s ease-in-out;
+  }
+  .link:hover{
+    transform: translateY(-2px);
+  }
