--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,13 +1,15 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
-body { 
+body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
   overflow: hidden;
-  background-color: #0B4F6C;
+  background-color: #0b4f6c;
   padding: 1rem 1.5rem;
 }
 
@@ -17,7 +19,7 @@ body {
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px; 
+  font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
 }
@@ -25,7 +27,7 @@ body {
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
-  color: #FCFFEB;
+  color: #fcffeb;
 }
 
 .header a:hover {
@@ -35,13 +37,13 @@ body {
 
 .header a.active {
   background-color: #5dd4f4;
-  color: #312E38;
+  color: #312e38;
   border-radius: 1rem;
 }
 
 .header-right {
   float: right;
-  background-color: #FBFBFF;
+  background-color: #fbfbff;
   border-radius: 3rem;
 }
 
@@ -51,7 +53,7 @@ body {
     display: block;
     text-align: left;
   }
-  
+
   .header-right {
     float: none;
   }
@@ -77,10 +79,32 @@ body {
   color: white;
 }
 
-
 .icon {
   font-size: 1.3rem;
-  padding: .1rem;
+  padding: 0.1rem;
   cursor: pointer;
   vertical-align: sub;
+}
+.profile-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile-picture img {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+}
+
+.sign-out {
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
+  float: left;
+  border-radius: 28px;
+  font-size: 18px;
+  line-height: 25px;
+  padding: 12px;
+  text-align: center;
 }
