--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -17,8 +17,26 @@
     border: 0;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
+.nav-link:hover{
+  color: black !important;
+  background-color: white;
+  border-radius: .3rem;
+}
 .navbar-brand{
   color: rgb(251, 251, 255) !important;
+  padding-top: var(--bs-navbar-brand-padding-y);
+    padding-bottom: var(--bs-navbar-brand-padding-y);
+    padding-left: .5rem;
+    padding-right: .5rem;
+    margin-right: var(--bs-navbar-brand-margin-end);
+    font-size: var(--bs-navbar-brand-font-size);
+    text-decoration: none;
+    white-space: nowrap;
+}
+.navbar-brand:hover{
+  color: black !important;
+  background-color: white;
+  border-radius: .3rem;
 }
 .dropdown-item {
   display: block;
