switching to TMDB api and css changes

--- a/src/components/LoginPage/login.css
+++ b/src/components/LoginPage/login.css
@@ -41,4 +41,8 @@
     .css-cuefkz-MuiContainer-root{
         margin: 18% 0;
     }
+    .css-cuefkz-MuiContainer-root{
+        margin-top: 20%;
+        margin-bottom: 20%;
+    }
 }
