--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -6,7 +6,6 @@
 
 footer{
     width: -webkit-fill-available;
-    /* position: absolute; */
     bottom: 0;
       
 }
@@ -20,19 +19,9 @@ footer{
     color: #0B4F6C;
     font-family: 'Nunito Sans', sans-serif;
   }
-  
-  /* .flex-container > div {
-    background-color: DodgerBlue;
-    color: white;
-    margin: 1%;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-  } */
 
   .card-s{
    padding: 1% 3%;
-   /* margin: 1% 0; */
   }
 
   .heading-one{
@@ -43,12 +32,16 @@ footer{
   }
 
   .imgg{
-    /* width: 100vw;
-    height: 40vh; */
     margin: 0 3% 0 3%;
     box-shadow: 0px 0px 10px black;
     width: -webkit-fill-available;
   }
+
+  @media (max-width:768px){
+  .d{
+    margin-top: 10% !important;
+  }
+}
 
 
 
