--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -103,6 +103,7 @@
   
     .link {
       font-size: 1rem; 
+      padding: 0 .4rem;
     }
     @media (max-width: 300px){
       .first , .second, .third{
