adding search bar and creating movie details page, displayed upon clicking a card

--- a/src/components/HomePage/Cards/card.css
+++ b/src/components/HomePage/Cards/card.css
@@ -3,6 +3,10 @@
 .body {
   background-color: #fbfbff;
 }
+.row{
+  padding: 2% 3%; 
+  text-align: -webkit-center;
+}
 
 .title {
   text-decoration: none;
