--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -63,142 +63,9 @@
   margin-right: 0.6rem;
   margin-left: 2rem;
 }
-
-
-/* * {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header {
-  overflow: hidden;
-  background-color: #0b4f6c;
-  padding: 1rem 1.5rem;
-}
-
-NavLink {
-  float: left;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.custom-btn{
-  text-align: start;
-  text-decoration: none;
-  color: #000;
-  border-radius: 4px;
-}
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  color: #fcffeb;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header a.active {
-  background-color: #5dd4f4;
-  color: #312e38;
-  border-radius: 1rem;
-}
-
-.header-right {
-  float: right;
-  background-color: #fbfbff;
-  border-radius: 3rem;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
-}
-.header-link {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header-link:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header-link.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.icon {
-  font-size: 1.3rem;
-  padding: 0.1rem;
-  cursor: pointer;
-  vertical-align: sub;
-}
-.profile-container {
-  display: flex;
-  align-items: center;
-}
-
-.profile-picture img {
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  margin-right: 0.6rem;
-}
-
-.sign-out {
-  cursor: pointer;
-  text-decoration: none;
-  color: #000;
-  float: left;
-  border-radius: 28px;
-  font-size: 18px;
-  line-height: 25px;
-  padding: 12px;
-  text-align: center;
-}
-
-
-.profile-details {
-  display: flex;
-  flex-direction: column;
-}
-
-.profile-name {
-  font-weight: bold;
-}
-
-.profile-email {
-  font-size: .8rem;
-  color: #888;
-}
-.profile-button {
-  cursor: pointer;
-  background-color: transparent;
+.holder{
+  margin-top: 1%;
   border: none;
-  font-size: 16px;
-  color: black;
-} */
+}
+
+
