--- a/src/components/HomePage/Cards/MovieDetailsPage.css
+++ b/src/components/HomePage/Cards/MovieDetailsPage.css
@@ -4,16 +4,27 @@
   justify-content: center;
   max-width: 90%;
   margin: 4% auto;
+  border-radius: 1rem;
   padding: 2rem;
   background-color: #fff;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   align-items: center;
 }
 
+.col{
+  color: rgb(11, 79, 108);
+  font-weight: 700;
+}
+.space{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .div-one {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .div-two {
@@ -25,17 +36,23 @@
   font-weight: bold;
   margin-bottom: 0.8rem;
   text-align: center !important;
+  color: rgb(11, 79, 108);
+  text-shadow: 1.5px 1.5px  rgb(103, 209, 254);
 }
 
 .movie-poster img {
   max-width: 100%;
   height: auto;
-  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.4);
   flex: 1;
   display: block;
   margin-right: auto;
   margin-left: auto;
   margin-top: 5%;
+  border-radius: 1rem;
+}
+.movie-poster img:hover{
+  cursor: pointer;
 }
 
 .release-date {
@@ -44,18 +61,18 @@
 }
 
 .overview {
-  font-size: 1.6rem;
-  margin-top: 0.8rem;
-  width: 80%;
+  font-size: 1.8rem;
+  margin: 6rem 0;
+  width: 95%;
 }
 
 .vote-average {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-top: 0.8rem;
 }
 
 .runtime {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-top: 0.8rem;
 }
 
@@ -89,5 +106,12 @@
 
   .overview {
     width: 100%; 
+    margin: 2rem 0;
+  }
+}
+@media (max-width:1000px) {
+  .overview {
+    width: 100%; 
+    margin: 1rem 0;
   }
 }
