--- a/src/components/ProfilePage/profilepage.css
+++ b/src/components/ProfilePage/profilepage.css
@@ -42,3 +42,9 @@
     font-weight: 500;
     text-decoration: underline;
 }
+
+@media (max-width:768px){
+    .user-img{
+        width: 50%;
+    }
+}
