--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -19,20 +19,6 @@
   font-size: 24px;
 }
 
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.bar {
-  width: 30px;
-  height: 3px;
-  background-color: rgb(251, 251, 255);
-  margin: 4px 0;
-  transition: 0.4s;
-}
-
 .nav {
   display: flex;
   align-items: center;
@@ -42,7 +28,6 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  vertical-align: auto;
   display: flex;
 }
 
@@ -62,22 +47,24 @@
   color: rgb(106, 208, 255);
 }
 
-.profile{
+.profile {
   transition: color 0.3s;
 }
-.profile:hover{
+
+.profile:hover {
   cursor: pointer;
   color: rgb(106, 208, 255);
 }
 
-.icon-p{
+.icon-p {
   vertical-align: middle;
 }
 
-.so{
+.so {
   transition: color 0.3s;
 }
-.so:hover{
+
+.so:hover {
   cursor: pointer;
   color: rgb(106, 208, 255);
 }
@@ -93,7 +80,7 @@
   background-color: rgb(11, 79, 108);
   min-width: 160px;
   z-index: 1;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .dropdown-content:hover,
@@ -114,33 +101,36 @@
   margin-left: 2rem;
 }
 
-/* Media Query for Small Screens (e.g., mobile) */
 @media screen and (max-width: 768px) {
-  .menu-toggle {
-    display: flex;
-  }
-
-  .nav {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 55px;
-    right: 0;
-    background-color: rgb(11, 79, 108);
-    width: 100%;
-    transition: 1.5s ease;
-    z-index: 1;
-  }
-
-  .nav.open {
-    display: flex;
-  }
-
   .nav li {
     margin: 0;
     padding: 15px 10px 15px 0;
     text-align: center;
     width: 100%;
+  }
+
+  .profile{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .dropdown-content:hover,
+  .dropdown-content.open {
+    display: block !important;
+    margin-top: 3rem;
+  }
+
+  .profile-picture img {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    margin-right: 0.6rem;
+    margin-left: 2rem;
+  }
+
+  .icon-p {
+    vertical-align: middle;
   }
 
   .dropdown {
@@ -152,5 +142,4 @@
     width: 100%;
     left: 0;
   }
-  
 }
