--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -93,7 +93,7 @@
   padding: 10px;
 }
 
-.profile-picture img {
+.profile-picture{
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
@@ -104,7 +104,7 @@
 @media screen and (max-width: 768px) {
   .nav li {
     margin: 0;
-    padding: 15px 10px 15px 0;
+    padding: 10px 10px 10px 12px;
     text-align: center;
     width: 100%;
   }
@@ -118,15 +118,15 @@
   .dropdown-content:hover,
   .dropdown-content.open {
     display: block !important;
-    margin-top: 3rem;
+    margin-top: 1.2rem;
   }
 
-  .profile-picture img {
+  .profile-picture{
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 50%;
-    margin-right: 0.6rem;
-    margin-left: 2rem;
+    margin: 0;
+    margin-left: 1.5rem;
   }
 
   .icon-p {
