--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -80,6 +80,7 @@ header {
   padding: 0 2rem;
   background-color: var(--mainColor);
   color: var(--textColor);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
 }
 
 .logo {
