--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -138,7 +138,7 @@ nav {
 
   header nav {
     position: fixed;
-    top: -120vh;
+    top: -100vh;
     left: 0;
     height: 100%;
     width: 100%;
@@ -149,11 +149,12 @@ nav {
     gap: 1.5rem;
     background-color: var(--mainColor);
     transition: 1s;
-    z-index: 2;
+    z-index: 10;
   }
 
   header .responsive_nav {
-    transform: translateY(120vh);
+    transform: translateY(100vh);
+    height: 100vh;
   }
 
   nav .nav-close-btn {
