--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -45,9 +45,31 @@ footer{
     align-items: center;
   }
 
+  .labell{
+    padding-right: 1rem;
+    color: #0B4F6C;
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+
+  .select-sort{
+    border-radius: 1rem;
+    padding: .2rem;
+    font-weight: 700;
+    color: #0B4F6C;
+  }
+  .select-sort:focus-visible{
+    border-color: #0B4F6C !important;
+  }
+
   @media (max-width:768px){
   .d{
     margin-top: 10% !important;
+  }
+  .sort-dropdown{
+    justify-content: center;
+    padding: 0;
+    padding-top: 2rem;
   }
 }
 
